2009-01-22  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simple.watrayplugin:
	
	Added Website and Copyright.
	
	*  watray/watraypreferencemanager.vala:
	
	Added basic activated plugins list
	
	*  watray/watrayplugininfo.vala:
	
	Added website and copyright properties. Return authors as an array.
	
	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	
	Added about plugin dialog.
	
	*  watray/watraypluginmanager.vala:
	
	Get plugin by name.
	
2009-01-20  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	
	Added remove_item.
	
2009-01-20  Matias De la Puente  <mfpuente.ar@gmail.com>
	
	*  watray/watraypreferencemanager.vala:
	
	Added activated plugins key to gconf.
	
2009-01-20  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayproject.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watrayprojectspanelinterface.vala:
	
	Better project managment.

2009-01-16  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watray/watrayprojectspanel.vala:
	*  watray/watrayplugininfo.vala:
	*  watray/watraymainwindow.vala:
	*  watray/watraypluginmanagerview.vala:
	*  watray/watraypluginmanager.vala:
	*  watray/watrayplugin.vala:
	
	Code cleanup.
	
	*  po/es.po:

	Update spanish translation.

2009-01-16  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  po/es.po:

	Update spanish translation of the about and configure plugin buttons.

2009-01-16  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  configure.ac:
	*  watray/watraypreferencemanager.vala:
	*  watray/watrayprojectspanel.vala:
	*  watray/watraymainwindow.vala:
	*  watray/Makefile.am:

	Added basic support for gconf.

	*  watray/watraypluginmanagerview.vala:

	Added about and configure plugin buttons.

2009-01-15  Matias De la Puente  <mfpuente.ar@gmail.com>

	* pixmaps/:
	* configure.ac:
	* Makefile.am:
	
	Remove pixmaps files. Not used for now

2009-01-13  Matias De la Puente  <mfpuente.ar@gmail.com>

	*  watraysimple/simple.watrayplugin: